# spendo

./: .gitignore  README.md  dune-project  install.sh  spendo.opam  spendo_data.json
.specstory/history/: 2025-07-29_20-45Z-setup-ocaml-cli-tool-for-expenses.md  2025-07-29_21-04Z-create-an-ocaml-cli-utility-for-expenses.md  2025-07-29_23-40Z-store-monthly-budget-in-settings-json.md
lib/: dune  expense.ml  storage.ml  types.ml
test/: dune  test_spendo.ml
